Completed the task of fixing the keyboard - Shift now works.

--- a/client/stylesheet.css
+++ b/client/stylesheet.css
@@ -292,7 +292,8 @@ button{
 	}
 
 	#charsLeft{
-		bottom: 45%;
+		font-size: 8pt;
+		bottom: 55%;
 		right: 0;
 	}
 
